--- a/source/form.html
+++ b/source/form.html
@@ -17,24 +17,34 @@
     <div class="page-header__inner">
       <div class="button-list button-list--closed page-header__button-list">
         <a class="button-list__logo" href="index.html">
-          <svg class="button-list__logo-image button-list__logo-image--ismobile" width="74.426px" height="22.859px"><use xlink:href="#logo-pink-white-mobile"></use></svg>
-          <svg class="button-list__logo-image button-list__logo-image--istablet" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-white-tablet"></use></svg>
-          <svg class="button-list__logo-image button-list__logo-image--isdesktop" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-white-desktop"></use></svg>
+          <svg class="button-list__logo-image button-list__logo-image--ismobile" width="74.426px" height="22.859px">
+            <use xlink:href="#logo-pink-white-mobile"></use>
+          </svg>
+          <svg class="button-list__logo-image button-list__logo-image--istablet" width="146.3px" height="40.375px">
+            <use xlink:href="#logo-pink-white-tablet"></use>
+          </svg>
+          <svg class="button-list__logo-image button-list__logo-image--isdesktop" width="146.3px" height="40.375px">
+            <use xlink:href="#logo-pink-white-desktop"></use>
+          </svg>
         </a>
         <button class="button-list__toggle button-list__toggle--nojs">
-          <svg class="button-list__toggle-open--opened button-list__toggle-open" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007" xml:space="preserve">
+          <svg class="button-list__toggle-open--opened button-list__toggle-open" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007"
+            xml:space="preserve">
             <g id="miu">
               <g id="editor_list_view_hambuger_menu_glyph">
                 <g>
-                  <path fill="" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                  <path fill=""
+                    d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z" />
                 </g>
                 <g>
-                  <path fill="" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                  <path fill=""
+                    d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z" />
                 </g>
               </g>
             </g>
           </svg>
-          <svg class="button-list__toggle-close--closed button-list__toggle-close" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
+          <svg class="button-list__toggle-close--closed button-list__toggle-close" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867"
+            xml:space="preserve">
             <path fill=""
               d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z" />
           </svg>
@@ -62,12 +72,95 @@
     <div class="page-main__inner page-main__inner--form">
       <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </div>
+    <div class="page-main__vrapper page-main__vrapper--form">
+      <div class="page-main__post">
+        <p class="page-main__post-item">
+          Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
+          <b class="page-main__post-items">Пожалуйста, заполните форму ниже:</b>
+        </p>
+      </div>
+      <form class="userform page-main__userform" action="index.html" method="post">
+        <div class="userform__list">
+          <label class="userform__list-item"><span class="userform__list-item-text"> Фамилия:</span>
+            <input class="userform__list-input" type="text" name="surname" placeholder="Укажите фамилию *" autocomplete="off" required>
+          </label>
+          <label class="userform__list-item"><span class="userform__list-item-text">Имя:</span>
+            <input class="userform__list-input userform__list-input--name" type="text" name="name" placeholder="Введите ваше имя *" autocomplete="off" required>
+          </label>
+          <label class="userform__list-item"><span class="userform__list-item-text">Отчество:</span>
+            <input class="userform__list-input" type="text" name="patronymic" placeholder="Ну и отчество тоже" autocomplete="off">
+          </label>
+        </div>
+        <div class="userform__list-checkbox">
+          <fieldset class="userform__area-checkbox">
+            <legend class="userform__title"><span class="userform__checkbox-title">Ваши безбашенные достижения в путешествии</span></legend>
+            <label class="userform__checkbox-name">Сделал селфи с акулой
+              <input class="userform__checkbox" type="checkbox" name="type1" checked>
+            </label>
+            <label class="userform__checkbox-name">Обгорел на пляже
+              <input class="userform__checkbox" type="checkbox" name="type2" checked>
+            </label>
+            <label class="userform__checkbox-name">Видел Чака Норриса
+              <input class="userform__checkbox" type="checkbox" name="type3">
+            </label>
+            <label class="userform__checkbox-name">Накупил сувениров
+              <input class="userform__checkbox" type="checkbox" name="type4">
+            </label>
+            <label class="userform__checkbox-name">Удержал башню
+              <input class="userform__checkbox" type="checkbox" name="type5" checked>
+            </label>
+            <label class="userform__checkbox-name">Разгромил отель
+              <input class="userform__checkbox" type="checkbox" name="type6">
+            </label>
+          </fieldset>
+        </div>
+        <div class="userform__list-contact">
+          <fieldset class="userform__area-contact">
+            <legend class="userform__contact-title">Контактная информация</legend>
+            <label class="userform__contact-item"><span class="userform__contact-text userform__contact-text--phone">Номер телефона</span>
+              <input class="userform__contact-input" type="tel" name="phone" placeholder="Номер, пожалуйста" autocomplete="off">
+            </label>
+            <label class="userform__contact-item"><span class="userform__contact-text userform__contact-text--mail">Адрес почты</span>
+              <input class="userform__contact-input" type="email" name="email" placeholder="Введите почту *" autocomplete="off" required>
+            </label>
+          </fieldset>
+        </div>
+        <div class="userform__list-radio">
+          <fieldset class="userform__area-radio">
+            <legend class="userform__title-radio"><span class="userform__radio-title">С каким приложением путешествовали?</span></legend>
+            <label class="userform__radio-name">Pink для iOS
+              <input class="userform__radio" type="radio" name="application" value="iOS" checked>
+            </label>
+            <label class="userform__radio-name">Pink на Android
+              <input class="userform__radio" type="radio" name="application" value="Android">
+            </label>
+            <label class="userform__radio-name">Windows Phone
+              <input class="userform__radio" type="radio" name="application" value="Windows">
+            </label>
+          </fieldset>
+        </div>
+        <div class="userform__list-textarea">
+          <fieldset class="userform__area-text">
+            <legend class="userform__title-textarea"><span class="userform__text-title">Опишите свои эмоции</span></legend>
+            <textarea class="userform__textarea" name="text" autocomplete="off">Можно прям в красках, не стесняясь в выражениях</textarea>
+          </fieldset>
+        </div>
+        <div class="userform__submit-list">
+          <button class="userform__submit" type="submit" name="button">Отправить форму</button>
+          <p class="userform__commit"><span class="userform__star">*</span> — обязательные поля</p>
+        </div>
+      </form>
+    </div>
   </main>
   <footer class="page-footer">
     <div class="page-footer__inner">
       <a class="page-footer__logo" href="index.html">
-        <svg class="page-footer__logo-image page-footer__logo-image--ismobile" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-blue-mobile"></use></svg>
-        <svg class="page-footer__logo-image page-footer__logo-image--isdesktop" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-blue-desktop"></use></svg>
+        <svg class="page-footer__logo-image page-footer__logo-image--ismobile" width="146.3px" height="40.375px">
+          <use xlink:href="#logo-pink-blue-mobile"></use>
+        </svg>
+        <svg class="page-footer__logo-image page-footer__logo-image--isdesktop" width="146.3px" height="40.375px">
+          <use xlink:href="#logo-pink-blue-desktop"></use>
+        </svg>
       </a>
       <ul class="page-footer__social-list">
         <li class="page-footer__social-item">
@@ -84,7 +177,7 @@
         </li>
         <li class="page-footer__social-item">
           <a class="page-footer__social-link page-footer__social-link--facebook" href="https://www.facebook.com/htmlacademy">
-            <svg version="1.0"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.673px" height="18.944px" viewBox="0 0 8.673 18.944" enable-background="new 0 0 8.673 18.944" xml:space="preserve">
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.673px" height="18.944px" viewBox="0 0 8.673 18.944" enable-background="new 0 0 8.673 18.944" xml:space="preserve">
               <path fill="#D22856"
                 d="M6.275,3.357c0.799,0,1.599,0,2.398,0c0-1.119,0-2.238,0-3.357c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.115 H0v3.517h1.958c0,3.104,0,6.208,0,9.312c1.279,0,2.558,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.115H5.786 C5.765,5.07,5.75,3.709,6.275,3.357z" />
             </svg>
@@ -99,7 +192,7 @@
         </li>
       </ul>
       <div class="page-footer__copyright">
-        <b class="page-footer__copyright-text">Разработано:</b>
+        <b class="page-footer__copyright-text">Разработано</b>
         <a class="page-footer__copyright-button" href="https://htmlacademy.ru/intensive/adaptive">
           <svg class="page-footer__copyright-image" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
             <path fill=""
@@ -109,6 +202,23 @@
       </div>
     </div>
   </footer>
+  <section class="modal-popup">
+    <h2 class="visually-hidden">Заявка принята</h2>
+    <p class="modal-popup__title">Ваша заявка отправлена</p>
+    <p class="modal-popup__text">
+      Спасибо за ваше участие, ваша заявка уже поступила к нам.
+      В ближайшее время мы рассмотрим ее и оповестим вас.
+    </p>
+    <button type="button" name="button">ЗАКРЫТЬ ОКНО</button>
+  </section>
+  <section class="modal-popup modal-popup--failure">
+    <h2 class="visually-hidden">Ошибка ввода</h2>
+    <p class="modal-popup__title">Что-то пошло не так!</p>
+    <p class="modal-popup__text">
+      Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+    </p>
+    <button type="button" name="button">OK</button>
+  </section>
   <script src="js/script.js"></script>
   <script src="js/picturefill.js" async></script>
 </body>
