--- a/source/index.html
+++ b/source/index.html
@@ -17,9 +17,15 @@
     <div class="page-header__inner">
       <div class="button-list button-list--closed page-header__button-list">
         <a class="button-list__logo">
-          <svg class="button-list__logo-image button-list__logo-image--ismobile" width="74.426px" height="22.859px"><use xlink:href="#logo-pink-white-mobile"></use></svg>
-          <svg class="button-list__logo-image button-list__logo-image--istablet" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-white-tablet"></use></svg>
-          <svg class="button-list__logo-image button-list__logo-image--isdesktop" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-white-desktop"></use></svg>
+          <svg class="button-list__logo-image button-list__logo-image--ismobile" width="74.426px" height="22.859px">
+            <use xlink:href="#logo-pink-white-mobile"></use>
+          </svg>
+          <svg class="button-list__logo-image button-list__logo-image--istablet" width="146.3px" height="40.375px">
+            <use xlink:href="#logo-pink-white-tablet"></use>
+          </svg>
+          <svg class="button-list__logo-image button-list__logo-image--isdesktop" width="146.3px" height="40.375px">
+            <use xlink:href="#logo-pink-white-desktop"></use>
+          </svg>
         </a>
         <button class="button-list__toggle button-list__toggle--nojs">
           <svg class="button-list__toggle-open--opened button-list__toggle-open" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007"
@@ -141,7 +147,7 @@
             </p>
             <p class="advantages__research-post">
               Британские ученые провели исследования и доказали,
-              что положительный эффект&nbspот использования приложения
+              что положительный эффект от использования приложения
               длится целые сутки!
             </p>
             <a class="advantages__research-link" href="#">Узнать больше об исследовании</a>
@@ -149,7 +155,7 @@
         </div>
       </div>
     </section>
-    <!--<section class="reviews page-main__reviews">
+    <section class="reviews page-main__reviews">
       <h2 class="visually-hidden">О нас</h2>
       <ul class="reviews__list">
         <li class="reviews__item reviews__item--visually">
@@ -159,6 +165,14 @@
             «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
             А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
           </p>
+          <div class="reviews__buttons-arrow">
+            <svg class="reviews__buttons-arrow-right" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+              <path fill="" d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z"/>
+            </svg>
+            <svg class="reviews__buttons-arrow-left" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+              <path fill="" d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
+            </svg>
+          </div>
           <label class="visually-hidden" for="review1">Первая страница</label>
         </li>
         <li class="reviews__item">
@@ -181,37 +195,59 @@
         </li>
       </ul>
       <div class="reviews__buttons">
-        <input class="reviews__button-radio" type="radio" id="review1" name="contact" checked>
-        <input class="reviews__button-radio" type="radio" id="review2" name="contact">
-        <input class="reviews__button-radio" type="radio" id="review3" name="contact">
+        <input class="reviews__button-radio1" type="radio" id="review1" name="contact" checked>
+        <input class="reviews__button-radio2" type="radio" id="review2" name="contact">
+        <input class="reviews__button-radio3" type="radio" id="review3" name="contact">
       </div>
     </section>
     <section class="tariffs page-main__tariffs">
       <h2 class="visually-hidden">Тарифы</h2>
-      <table>
-        <th>
-          <td>Стандарт <b>3,99 USD</b></td>
-        </th>
-        <tr>
-          <td>Розовый фильтр</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Смайлики</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Комментарии</td>
-          <td></td>
-          <td></td>
-        </tr>
-      </table>
-      <div class="tariffs__buttons">
-        <input class="tariffs__buttons-radio" type="radio" id="tariff1" name="contact">
-        <input class="tariffs__buttons-radio" type="radio" id="tariff2" name="contact" checked>
-        <input class="tariffs__buttons-radio" type="radio" id="tariff3" name="contact">
+      <div class="tariffs__wrapper">
+        <table class="tariffs__list tariffs__list--ismobile">
+          <tr class="tariffs__item-title">
+            <th class="tariffs__item-name">Стандарт <b class="tariffs__item-price">3,99 USD</b></th>
+          </tr>
+          <tr class="tariffs__item-function">
+            <td class="tariffs__item-function-name">Розовый фильтр</td>
+          </tr>
+          <tr class="tariffs__item-function">
+            <td class="tariffs__item-function-name">Смайлики</td>
+          </tr>
+          <tr class="tariffs__item-function">
+            <td class="tariffs__item-function-name tariffs__item-function-name--no">Комментарии</td>
+          </tr>
+        </table>
+        <table class="tariffs__list">
+          <tr class="tariffs__item-title">
+            <th class="tariffs__item-name"></th>
+            <th class="tariffs__item-name">База <b class="tariffs__item-prices">1,99 USD</b></th>
+            <th class="tariffs__item-name">Стандарт <b class="tariffs__item-prices tariffs__item-prices--hit">3,99 USD</b></th>
+            <th class="tariffs__item-name">Анлим <b class="tariffs__item-prices">9,99 USD</b></th>
+          </tr>
+          <tr class="tariffs__item-functions">
+            <td class="tariffs__item-functions-name">Розовый фильтр</td>
+            <td class="tariffs__item-availability"></td>
+            <td class="tariffs__item-availability"></td>
+            <td class="tariffs__item-availability"></td>
+          </tr>
+          <tr class="tariffs__item-functions">
+            <td class="tariffs__item-functions-name">Смайлики</td>
+            <td class="tariffs__item-availability tariffs__item-availability--no"></td>
+            <td class="tariffs__item-availability"></td>
+            <td class="tariffs__item-availability"></td>
+          </tr>
+          <tr class="tariffs__item-functions">
+            <td class="tariffs__item-functions-name">Комментарии</td>
+            <td class="tariffs__item-availability tariffs__item-availability--no"></td>
+            <td class="tariffs__item-availability tariffs__item-availability--no"></td>
+            <td class="tariffs__item-availability"></td>
+          </tr>
+        </table>
+        <div class="tariffs__buttons">
+          <input class="tariffs__buttons-radio1" type="radio" id="tariff1" name="contact1">
+          <input class="tariffs__buttons-radio2" type="radio" id="tariff2" name="contact1" checked>
+          <input class="tariffs__buttons-radio3" type="radio" id="tariff3" name="contact1">
+        </div>
       </div>
     </section>
     <section class="contacts page-main__contacts">
@@ -220,13 +256,46 @@
         <p class="contacts__post-item">Остались вопросы?</p>
         <p class="contacts__post-item">Свяжитесь с нами!</p>
       </div>
-    </section>-->
+      <ul class="contacts__list">
+        <li class="contacts__list-item">
+          <p class="contacts__list-title">Звоните:</p>
+          <p class="contacts__list-text">+7 (812) 555-66-66</p>
+        </li>
+        <li class="contacts__list-item">
+          <p class="contacts__list-title">Пишите:</p>
+          <a class="contacts__list-text contacts__list-text--mail">mail@htmlacademy.ru</a>
+        </li>
+        <li class="contacts__list-item contacts__list-item--last">
+          <p class="contacts__list-title">Приезжайте в гости:</p>
+          <p class="contacts__list-text">
+            ул. Большая Конюшенная, 19/8
+          </p>
+        </li>
+      </ul>
+      <div class="contacts__map-wrapper">
+        <a class="contacts__map" href="https://goo.gl/maps/78XYrMhJ2uwvuyWG7">
+          <picture>
+            <source type="image/webp" media="(min-width: 960px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
+
+            <source media="(min-width: 960px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+            <source media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+            <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="645" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+          </picture>
+        </a>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__inner page-footer__inner--index">
       <a class="page-footer__logo">
-        <svg class="page-footer__logo-image page-footer__logo-image--ismobile" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-blue-mobile"></use></svg>
-        <svg class="page-footer__logo-image page-footer__logo-image--isdesktop" width="146.3px" height="40.375px"><use xlink:href="#logo-pink-blue-desktop"></use></svg>
+        <svg class="page-footer__logo-image page-footer__logo-image--ismobile" width="146.3px" height="40.375px">
+          <use xlink:href="#logo-pink-blue-mobile"></use>
+        </svg>
+        <svg class="page-footer__logo-image page-footer__logo-image--isdesktop" width="146.3px" height="40.375px">
+          <use xlink:href="#logo-pink-blue-desktop"></use>
+        </svg>
       </a>
       <ul class="page-footer__social-list">
         <li class="page-footer__social-item">
