--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="preload" href="/fonts/opensans.woff2" as="font">
+  <link rel="preload" href="/fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/opensanslight.woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body class="page-body">
@@ -90,7 +91,7 @@
             <input class="formusername__input" type="text" name="surname" placeholder="Укажите фамилию *" autocomplete="off" required>
           </label>
           <label class="formusername__item"><span class="formusername__item-text">Имя:</span>
-            <input class="formusername__input ususername__input--name" type="text" name="name" placeholder="Введите ваше имя *" autocomplete="off" required>
+            <input class="formusername__input formusername__input--name" type="text" name="name" placeholder="Введите ваше имя *" autocomplete="off" required>
           </label>
           <label class="formusername__item"><span class="formusername__item-text">Отчество:</span>
             <input class="formusername__input" type="text" name="patronymic" placeholder="Ну и отчество тоже" autocomplete="off">
