--- a/source/photo.html
+++ b/source/photo.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="preload" href="/fonts/opensans.woff2" as="font">
+  <link rel="preload" href="/fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/opensanslight.woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body class="page-body">
@@ -303,7 +304,7 @@
             <path fill="" d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519" />
           </svg>
         </div>
-        <ul class="photopset__list">
+        <ul class="photoset__list">
           <li class="photoset__item">
             <input class="photoset__crop-input" type="range" min="0" max="100" step="1" value="75">
           </li>
