--- a/source/photo.html
+++ b/source/photo.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="preload" href="/fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/fonts/opensanslight.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/opensans.woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body class="page-body">
@@ -373,7 +372,6 @@
     </div>
   </footer>
   <script src="js/script.js"></script>
-  <script src="js/picturefill.js" async></script>
 </body>
 
 </html>
